--- a/fandango_movie_ratings.ipynb
+++ b/fandango_movie_ratings.ipynb
@@ -52,17 +52,458 @@
     "- **imdb**\tthe IMDB rating of the movie (user score)\n",
     "- **tmeter**\tthe Rotten Tomatoes rating of the movie (the \"tomatometer\" - critic score)\n",
     "- **audience**\tthe Rotten Tomatoes rating of the movie (user score)\n",
-    "- **fandango\tthe Fandango rating of the movie (user score)\n",
-    "- **n_metascore\tthe metascore normalized to a 0-5 scale\n",
-    "- **n_imdb\tthe IMDB rating normalized to a 0-5 scale\n",
-    "- **n_tmeter\tthe tomatometer normalized to a 0-5 scale\n",
-    "- **n_audience\tthe Rotten Tomatoes user score normalized to a 0-5 scale\n",
-    "- **nr_metascore\tthe metascore normalized to a 0-5 scale and rounded to the nearest 0.5\n",
-    "- **nr_imdb\tthe IMDB rating normalized to a 0-5 scale and rounded to the nearest 0.5\n",
-    "- **nr_tmeter\tthe tomatometer normalized to a 0-5 scale and rounded to the nearest 0.5\n",
-    "- **nr_audience\tthe Rotten Tomatoes user score normalized to a 0-5 scale and rounded to the nearest 0.5\n",
+    "- **fandango**\tthe Fandango rating of the movie (user score)\n",
+    "- **n_metascore**\tthe metascore normalized to a 0-5 scale\n",
+    "- **n_imdb**\tthe IMDB rating normalized to a 0-5 scale\n",
+    "- **n_tmeter**\tthe tomatometer normalized to a 0-5 scale\n",
+    "- **n_audience**\tthe Rotten Tomatoes user score normalized to a 0-5 scale\n",
+    "- **nr_metascore**\tthe metascore normalized to a 0-5 scale and rounded to the nearest 0.5\n",
+    "- **nr_imdb**\tthe IMDB rating normalized to a 0-5 scale and rounded to the nearest 0.5\n",
+    "- **nr_tmeter**\tthe tomatometer normalized to a 0-5 scale and rounded to the nearest 0.5\n",
+    "- **nr_audience**\tthe Rotten Tomatoes user score normalized to a 0-5 scale and rounded to the nearest 0.5\n",
     "\n",
     "We'll use both of these datasets to analyze the rating system's characteristics before and after Hickey's analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FILM</th>\n",
+       "      <th>RottenTomatoes</th>\n",
+       "      <th>RottenTomatoes_User</th>\n",
+       "      <th>Metacritic</th>\n",
+       "      <th>Metacritic_User</th>\n",
+       "      <th>IMDB</th>\n",
+       "      <th>Fandango_Stars</th>\n",
+       "      <th>Fandango_Ratingvalue</th>\n",
+       "      <th>RT_norm</th>\n",
+       "      <th>RT_user_norm</th>\n",
+       "      <th>...</th>\n",
+       "      <th>IMDB_norm</th>\n",
+       "      <th>RT_norm_round</th>\n",
+       "      <th>RT_user_norm_round</th>\n",
+       "      <th>Metacritic_norm_round</th>\n",
+       "      <th>Metacritic_user_norm_round</th>\n",
+       "      <th>IMDB_norm_round</th>\n",
+       "      <th>Metacritic_user_vote_count</th>\n",
+       "      <th>IMDB_user_vote_count</th>\n",
+       "      <th>Fandango_votes</th>\n",
+       "      <th>Fandango_Difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Avengers: Age of Ultron (2015)</td>\n",
+       "      <td>74</td>\n",
+       "      <td>86</td>\n",
+       "      <td>66</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1330</td>\n",
+       "      <td>271107</td>\n",
+       "      <td>14846</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cinderella (2015)</td>\n",
+       "      <td>85</td>\n",
+       "      <td>80</td>\n",
+       "      <td>67</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>249</td>\n",
+       "      <td>65709</td>\n",
+       "      <td>12640</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ant-Man (2015)</td>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "      <td>64</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>627</td>\n",
+       "      <td>103660</td>\n",
+       "      <td>12055</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Do You Believe? (2015)</td>\n",
+       "      <td>18</td>\n",
+       "      <td>84</td>\n",
+       "      <td>22</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.70</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>31</td>\n",
+       "      <td>3136</td>\n",
+       "      <td>1793</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Hot Tub Time Machine 2 (2015)</td>\n",
+       "      <td>14</td>\n",
+       "      <td>28</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>88</td>\n",
+       "      <td>19560</td>\n",
+       "      <td>1021</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             FILM  RottenTomatoes  RottenTomatoes_User  \\\n",
+       "0  Avengers: Age of Ultron (2015)              74                   86   \n",
+       "1               Cinderella (2015)              85                   80   \n",
+       "2                  Ant-Man (2015)              80                   90   \n",
+       "3          Do You Believe? (2015)              18                   84   \n",
+       "4   Hot Tub Time Machine 2 (2015)              14                   28   \n",
+       "\n",
+       "   Metacritic  Metacritic_User  IMDB  Fandango_Stars  Fandango_Ratingvalue  \\\n",
+       "0          66              7.1   7.8             5.0                   4.5   \n",
+       "1          67              7.5   7.1             5.0                   4.5   \n",
+       "2          64              8.1   7.8             5.0                   4.5   \n",
+       "3          22              4.7   5.4             5.0                   4.5   \n",
+       "4          29              3.4   5.1             3.5                   3.0   \n",
+       "\n",
+       "   RT_norm  RT_user_norm  ...  IMDB_norm  RT_norm_round  RT_user_norm_round  \\\n",
+       "0     3.70           4.3  ...       3.90            3.5                 4.5   \n",
+       "1     4.25           4.0  ...       3.55            4.5                 4.0   \n",
+       "2     4.00           4.5  ...       3.90            4.0                 4.5   \n",
+       "3     0.90           4.2  ...       2.70            1.0                 4.0   \n",
+       "4     0.70           1.4  ...       2.55            0.5                 1.5   \n",
+       "\n",
+       "   Metacritic_norm_round  Metacritic_user_norm_round  IMDB_norm_round  \\\n",
+       "0                    3.5                         3.5              4.0   \n",
+       "1                    3.5                         4.0              3.5   \n",
+       "2                    3.0                         4.0              4.0   \n",
+       "3                    1.0                         2.5              2.5   \n",
+       "4                    1.5                         1.5              2.5   \n",
+       "\n",
+       "   Metacritic_user_vote_count  IMDB_user_vote_count  Fandango_votes  \\\n",
+       "0                        1330                271107           14846   \n",
+       "1                         249                 65709           12640   \n",
+       "2                         627                103660           12055   \n",
+       "3                          31                  3136            1793   \n",
+       "4                          88                 19560            1021   \n",
+       "\n",
+       "   Fandango_Difference  \n",
+       "0                  0.5  \n",
+       "1                  0.5  \n",
+       "2                  0.5  \n",
+       "3                  0.5  \n",
+       "4                  0.5  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fandango_score = pd.read_csv('fandango_score_comparison.csv')\n",
+    "fandango_score.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie</th>\n",
+       "      <th>year</th>\n",
+       "      <th>metascore</th>\n",
+       "      <th>imdb</th>\n",
+       "      <th>tmeter</th>\n",
+       "      <th>audience</th>\n",
+       "      <th>fandango</th>\n",
+       "      <th>n_metascore</th>\n",
+       "      <th>n_imdb</th>\n",
+       "      <th>n_tmeter</th>\n",
+       "      <th>n_audience</th>\n",
+       "      <th>nr_metascore</th>\n",
+       "      <th>nr_imdb</th>\n",
+       "      <th>nr_tmeter</th>\n",
+       "      <th>nr_audience</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10 Cloverfield Lane</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>76</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>90</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13 Hours</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>48</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>50</td>\n",
+       "      <td>83</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>3.65</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A Cure for Wellness</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>47</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>40</td>\n",
+       "      <td>47</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A Dog's Purpose</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>43</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>33</td>\n",
+       "      <td>76</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A Hologram for the King</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>58</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>70</td>\n",
+       "      <td>57</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.90</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>2.85</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     movie  year  metascore  imdb  tmeter  audience  fandango  \\\n",
+       "0      10 Cloverfield Lane  2016         76   7.2      90        79       3.5   \n",
+       "1                 13 Hours  2016         48   7.3      50        83       4.5   \n",
+       "2      A Cure for Wellness  2016         47   6.6      40        47       3.0   \n",
+       "3          A Dog's Purpose  2017         43   5.2      33        76       4.5   \n",
+       "4  A Hologram for the King  2016         58   6.1      70        57       3.0   \n",
+       "\n",
+       "   n_metascore  n_imdb  n_tmeter  n_audience  nr_metascore  nr_imdb  \\\n",
+       "0         3.80    3.60      4.50        3.95           4.0      3.5   \n",
+       "1         2.40    3.65      2.50        4.15           2.5      3.5   \n",
+       "2         2.35    3.30      2.00        2.35           2.5      3.5   \n",
+       "3         2.15    2.60      1.65        3.80           2.0      2.5   \n",
+       "4         2.90    3.05      3.50        2.85           3.0      3.0   \n",
+       "\n",
+       "   nr_tmeter  nr_audience  \n",
+       "0        4.5          4.0  \n",
+       "1        2.5          4.0  \n",
+       "2        2.0          2.5  \n",
+       "3        1.5          4.0  \n",
+       "4        3.5          3.0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_ratings_16_17 = pd.read_csv('movie_ratings_16_17.csv')\n",
+    "movie_ratings_16_17.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We're only interested in the Fandango data, so we'll keep only the columns relevant to Fandango ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "before_hickey = fandango_score[['FILM', 'Fandango_Stars', 'Fandango_Ratingvalue', 'Fandango_votes', 'Fandango_Difference']]\n",
+    "after_hickey = movie_ratings_16_17[['movie', 'year', 'fandango']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading the documentation for the datasets, we can see that the samples are not chosen randomly but rather selected based on popularity. This is known as purposive sampling and unfortunately makes it difficult for us to compare the two sets of data statistically since samples could have been selected very differently for each.\n",
+    "\n",
+    "## Changing the Goal\n",
+    "Since the samples are unlikely to be representative of the population we are interested in describing, we'll have to either find new data or change our goal. \n",
+    "\n",
+    "Since we're unlikely to find data that perfectly fits our needs, let's try instead to compare the ratings for popular movies between the two time periods and see if anything has changed. This could even serve as a proxy for our original question."
    ]
   },
   {
