Added year split

--- a/fandango_movie_ratings.ipynb
+++ b/fandango_movie_ratings.ipynb
@@ -302,13 +302,13 @@
     }
    ],
    "source": [
-    "fandango_score = pd.read_csv('fandango_score_comparison.csv')\n",
-    "fandango_score.head(5)"
+    "fandango_before = pd.read_csv('fandango_score_comparison.csv')\n",
+    "fandango_before.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -467,14 +467,14 @@
        "4        3.5          3.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movie_ratings_16_17 = pd.read_csv('movie_ratings_16_17.csv')\n",
-    "movie_ratings_16_17.head(5)"
+    "fandango_after = pd.read_csv('movie_ratings_16_17.csv')\n",
+    "fandango_after.head(5)"
    ]
   },
   {
@@ -490,8 +490,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "before_hickey = fandango_score[['FILM', 'Fandango_Stars', 'Fandango_Ratingvalue', 'Fandango_votes', 'Fandango_Difference']]\n",
-    "after_hickey = movie_ratings_16_17[['movie', 'year', 'fandango']]"
+    "before_trimmed = fandango_before[['FILM', 'Fandango_Stars', 'Fandango_Ratingvalue', 'Fandango_votes', 'Fandango_Difference']]\n",
+    "after_trimmed = fandango_after[['movie', 'year', 'fandango']]"
    ]
   },
   {
@@ -503,7 +503,467 @@
     "## Changing the Goal\n",
     "Since the samples are unlikely to be representative of the population we are interested in describing, we'll have to either find new data or change our goal. \n",
     "\n",
-    "Since we're unlikely to find data that perfectly fits our needs, let's try instead to compare the ratings for popular movies between the two time periods and see if anything has changed. This could even serve as a proxy for our original question."
+    "Since we're unlikely to find data that perfectly fits our needs, let's try instead to compare the ratings for popular movies between the two time periods and see if anything has changed. This could even serve as a proxy for our original question.\n",
+    "\n",
+    "\n",
+    "## Fandango Ratings of Popular Movies\n",
+    "First let's make sure that our samples are of popular movies, that is using Fandango's definition of movies with over 30 fan ratings on the Fandango website. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(fandango_before['Fandango_votes'] < 30).sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Doing this on the 2016-2017 dataset is a little tougher since there isn't a column counting the number of fan reviews on Fandango, so instead let's take a random sample and make sure that most of the movies in that sample have greater than 30 votes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie</th>\n",
+       "      <th>year</th>\n",
+       "      <th>fandango</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>Mechanic: Resurrection</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206</th>\n",
+       "      <td>Warcraft</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>Max Steel</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>Me Before You</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Fantastic Beasts and Where to Find Them</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Cell</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>Genius</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>Sully</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A Hologram for the King</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Captain America: Civil War</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       movie  year  fandango\n",
+       "108                   Mechanic: Resurrection  2016       4.0\n",
+       "206                                 Warcraft  2016       4.0\n",
+       "106                                Max Steel  2016       3.5\n",
+       "107                            Me Before You  2016       4.5\n",
+       "51   Fantastic Beasts and Where to Find Them  2016       4.5\n",
+       "33                                      Cell  2016       3.0\n",
+       "59                                    Genius  2016       3.5\n",
+       "152                                    Sully  2016       4.5\n",
+       "4                    A Hologram for the King  2016       3.0\n",
+       "31                Captain America: Civil War  2016       4.5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "after_trimmed.sample(10, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at the Fandango website in May 2019, all of these movies except Cell (18 reviews) has over 30 fan reviews, which gives us enough confidence to say that this dataset is also representative of popular films.\n",
+    "\n",
+    "Now let's isolate the movies released in 2015 and 2016 into two separate data sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FILM</th>\n",
+       "      <th>RottenTomatoes</th>\n",
+       "      <th>RottenTomatoes_User</th>\n",
+       "      <th>Metacritic</th>\n",
+       "      <th>Metacritic_User</th>\n",
+       "      <th>IMDB</th>\n",
+       "      <th>Fandango_Stars</th>\n",
+       "      <th>Fandango_Ratingvalue</th>\n",
+       "      <th>RT_norm</th>\n",
+       "      <th>RT_user_norm</th>\n",
+       "      <th>...</th>\n",
+       "      <th>RT_norm_round</th>\n",
+       "      <th>RT_user_norm_round</th>\n",
+       "      <th>Metacritic_norm_round</th>\n",
+       "      <th>Metacritic_user_norm_round</th>\n",
+       "      <th>IMDB_norm_round</th>\n",
+       "      <th>Metacritic_user_vote_count</th>\n",
+       "      <th>IMDB_user_vote_count</th>\n",
+       "      <th>Fandango_votes</th>\n",
+       "      <th>Fandango_Difference</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Avengers: Age of Ultron (2015)</td>\n",
+       "      <td>74</td>\n",
+       "      <td>86</td>\n",
+       "      <td>66</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1330</td>\n",
+       "      <td>271107</td>\n",
+       "      <td>14846</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cinderella (2015)</td>\n",
+       "      <td>85</td>\n",
+       "      <td>80</td>\n",
+       "      <td>67</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>249</td>\n",
+       "      <td>65709</td>\n",
+       "      <td>12640</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ant-Man (2015)</td>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "      <td>64</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>627</td>\n",
+       "      <td>103660</td>\n",
+       "      <td>12055</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             FILM  RottenTomatoes  RottenTomatoes_User  \\\n",
+       "0  Avengers: Age of Ultron (2015)              74                   86   \n",
+       "1               Cinderella (2015)              85                   80   \n",
+       "2                  Ant-Man (2015)              80                   90   \n",
+       "\n",
+       "   Metacritic  Metacritic_User  IMDB  Fandango_Stars  Fandango_Ratingvalue  \\\n",
+       "0          66              7.1   7.8             5.0                   4.5   \n",
+       "1          67              7.5   7.1             5.0                   4.5   \n",
+       "2          64              8.1   7.8             5.0                   4.5   \n",
+       "\n",
+       "   RT_norm  RT_user_norm  ...  RT_norm_round  RT_user_norm_round  \\\n",
+       "0     3.70           4.3  ...            3.5                 4.5   \n",
+       "1     4.25           4.0  ...            4.5                 4.0   \n",
+       "2     4.00           4.5  ...            4.0                 4.5   \n",
+       "\n",
+       "   Metacritic_norm_round  Metacritic_user_norm_round  IMDB_norm_round  \\\n",
+       "0                    3.5                         3.5              4.0   \n",
+       "1                    3.5                         4.0              3.5   \n",
+       "2                    3.0                         4.0              4.0   \n",
+       "\n",
+       "   Metacritic_user_vote_count  IMDB_user_vote_count  Fandango_votes  \\\n",
+       "0                        1330                271107           14846   \n",
+       "1                         249                 65709           12640   \n",
+       "2                         627                103660           12055   \n",
+       "\n",
+       "   Fandango_Difference  Year  \n",
+       "0                  0.5  2015  \n",
+       "1                  0.5  2015  \n",
+       "2                  0.5  2015  \n",
+       "\n",
+       "[3 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fandango_before['Year'] = fandango_before['FILM'].str[-5:-1]\n",
+    "fandango_2015 = fandango_before[fandango_before['Year'] == '2015']\n",
+    "fandango_2015.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie</th>\n",
+       "      <th>year</th>\n",
+       "      <th>metascore</th>\n",
+       "      <th>imdb</th>\n",
+       "      <th>tmeter</th>\n",
+       "      <th>audience</th>\n",
+       "      <th>fandango</th>\n",
+       "      <th>n_metascore</th>\n",
+       "      <th>n_imdb</th>\n",
+       "      <th>n_tmeter</th>\n",
+       "      <th>n_audience</th>\n",
+       "      <th>nr_metascore</th>\n",
+       "      <th>nr_imdb</th>\n",
+       "      <th>nr_tmeter</th>\n",
+       "      <th>nr_audience</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10 Cloverfield Lane</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>76</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>90</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13 Hours</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>48</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>50</td>\n",
+       "      <td>83</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>3.65</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A Cure for Wellness</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>47</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>40</td>\n",
+       "      <td>47</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 movie  year  metascore  imdb  tmeter  audience  fandango  \\\n",
+       "0  10 Cloverfield Lane  2016         76   7.2      90        79       3.5   \n",
+       "1             13 Hours  2016         48   7.3      50        83       4.5   \n",
+       "2  A Cure for Wellness  2016         47   6.6      40        47       3.0   \n",
+       "\n",
+       "   n_metascore  n_imdb  n_tmeter  n_audience  nr_metascore  nr_imdb  \\\n",
+       "0         3.80    3.60       4.5        3.95           4.0      3.5   \n",
+       "1         2.40    3.65       2.5        4.15           2.5      3.5   \n",
+       "2         2.35    3.30       2.0        2.35           2.5      3.5   \n",
+       "\n",
+       "   nr_tmeter  nr_audience  \n",
+       "0        4.5          4.0  \n",
+       "1        2.5          4.0  \n",
+       "2        2.0          2.5  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fandango_2016 = fandango_after[fandango_after['year'] == 2016]\n",
+    "fandango_2016.head(3)"
    ]
   },
   {
