--- a/fandango_movie_ratings.ipynb
+++ b/fandango_movie_ratings.ipynb
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1014,11 +1014,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Conclusion\n",
+    "Our analysis shows that there is a small difference between Fandango's ratings of poopular mo"
+   ]
   }
  ],
  "metadata": {
